# linux-firewire-utils

./: .gitignore  Makefile.am  README  README.rst  meson.build
.github/workflows/: build.yml
src/: config-rom-pretty-printer.8.in  config-rom-pretty-printer.c  config.h.template  firewire-phy-command.c  firewire-request.c  lsfirewire.8.in  lsfirewirephy.c  meson.build
